--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-jupyter>=1.0.0
 matplotlib>=3.4.1
+nibabel>=4.0.1
+medpy>=0.4.0
+scipy>=1.4.1
+numpy>=1.19.4
+opencv-python>=4.6.0.66
 torch>=1.8.1
-pytorch-lightning>=1.2.8
+torch-summary>=1.4.5
 scikit-image>=0.18.1
 pillow>=7.2.0
 tqdm>=4.48.2
-scipy>=1.4.1
-numpy>=1.19.4
-nibabel>=4.0.1
-medpy>=0.4.0
-opencv-python>=4.6.0.66
