--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *.ipynb_checkpoints
 
-# Ignore data folder items
+# Ignore data and runs folder items
 data/*
 runs/*
 
@@ -25,24 +24,3 @@ var/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Rope
-.ropeproject
-
-# Sphinx documentation
-docs/_build/
